@@ -63,7 +63,7 @@
       <dependency>
         <groupId>org.jruby</groupId>
         <artifactId>jruby-complete</artifactId>
-        <version>1.3.0</version>
+        <version>1.3.1</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
